infrastructure/kubernetes/base/networking/allow-auth-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-auth-service
  labels:
    app.kubernetes.io/name: allow-auth-service
    app.kubernetes.io/part-of: devsphere
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: devsphere-auth-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: devsphere-api-gateway
      ports:
        - protocol: TCP
          port: 8081
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: devsphere-config-server
      ports:
        - protocol: TCP
          port: 8888
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: devsphere-service-discovery
      ports:
        - protocol: TCP
          port: 8761
    - ports:
        - protocol: TCP
          port: 9092
        - protocol: TCP
          port: 29092
        - protocol: TCP
          port: 3306
