infrastructure/kubernetes/base/networking/allow-ingress-to-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-gateway
  labels:
    app.kubernetes.io/name: allow-ingress-to-gateway
    app.kubernetes.io/part-of: devsphere
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: devsphere-api-gateway
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8080
